MAPA EN FORMULARIO DE SUCURSALES

--- a/.env.example
+++ b/.env.example
@@ -32,3 +32,6 @@ MAILGUN_SECRET=key-002f1c6ee4f691c5be813e580784fd4a
 PUSHER_APP_ID=
 PUSHER_KEY=
 PUSHER_SECRET=
+
+PROJECT_ID_GOOGLE=lavanderia-149215
+API_KEY_GOOGLE=AIzaSyB0OEqvYe-vqSSznJUX4Uwa0C0vPfM7gDM
