nuevos vendors, hacer composer update

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "laravelcollective/html": "^5.3.0",
         "intervention/image": "^2.3",
         "uxweb/sweet-alert": "~1.1",
-        "guzzlehttp/guzzle": "^6.2"
+        "guzzlehttp/guzzle": "^6.2",
+        "dougsisk/laravel-country-state": "^1.2",
+        "efriandika/laravel-settings": "^1.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
