--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "uxweb/sweet-alert": "~1.1",
         "guzzlehttp/guzzle": "^6.2",
         "dougsisk/laravel-country-state": "^1.2",
-        "efriandika/laravel-settings": "^1.2"
+        "efriandika/laravel-settings": "^1.2",
+        "doctrine/dbal": "^2.5"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
